--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,9 @@
             android:name=".RegistroUsuario"
             android:exported="false" />
         <activity
-            android:name=".Login"
-            android:exported="false" />
-        <activity
             android:name=".MenuActivity"
+            android:exported="false"/>
+        <activity android:name=".Login"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.ComicBook.NoActionBar">
@@ -26,6 +25,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+
+
     </application>
 
 </manifest>
